--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -10,22 +10,31 @@ py-hightech=Py HighTech
 [item-name]
 phosphate-rock=Phosphate Rock
 clay=Clay
+melamine=Melamine
+melamine-resin=Melamine Resin
 
 [item-description]
 clay=just clay
+melamine=primary polymer
+melamine-resin=the most basic resin
 
 [fluid-name]
-
+methane=Methane
+methanal=Formaldehyde
 
 [entity-name]
 phosphate-rock=Ancient Remains
 phosphate-mine=Phosphate Mine
 clay-pit=Clay-pit
+moondrop-greenhouse=Moondrop Greenhouse
+fbreactor=F.B.Reactor
 
 [entity-description]
 phosphate-rock=Remains of ancient life.
 phosphate-mine=Building to extract phosphate from phosphate-rich rocks.
 clay-pit=Building to mix and extract clay from ground.
+moondrop-greenhouse=Place to grow the Moondrops, an alien plant which produces methane.
+fbreactor=Basic fluidized bed reactor.
 
 [technology-name]
 
