--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,5 +1,5 @@
 [recipe-name]
-
+urea-decomposition=Urea decomposition
 
 [recipe-description]
 
@@ -12,15 +12,29 @@ phosphate-rock=Phosphate Rock
 clay=Clay
 melamine=Melamine
 melamine-resin=Melamine Resin
+urea=Urea
+ceramic=Ceramic
+inductor1=Inductor 1
+capacitor1=Capacitor 1
+resistor1=Resistor 1
+graphite=Graphite
+valve=Vacuum tube
 
 [item-description]
 clay=just clay
 melamine=primary polymer
 melamine-resin=the most basic resin
+ceramic=Basic ceramic
+capacitor1=First generation of capacitors
+inductor1=First generation of inductors
+resistor1=First generation of resistors
+valve= First generation of transistors
 
 [fluid-name]
 methane=Methane
 methanal=Formaldehyde
+ammonia=Ammonia
+cyanic-acid=Cyanic Acid
 
 [entity-name]
 phosphate-rock=Ancient Remains
@@ -28,13 +42,17 @@ phosphate-mine=Phosphate Mine
 clay-pit=Clay-pit
 moondrop-greenhouse=Moondrop Greenhouse
 fbreactor=F.B.Reactor
+auog-paddock=Auog paddock
+electronics-factory=Electronics Factory
 
 [entity-description]
+auog-paddock=Shy night creatures known as Aougs.
 phosphate-rock=Remains of ancient life.
 phosphate-mine=Building to extract phosphate from phosphate-rich rocks.
 clay-pit=Building to mix and extract clay from ground.
 moondrop-greenhouse=Place to grow the Moondrops, an alien plant which produces methane.
 fbreactor=Basic fluidized bed reactor.
+electronics-factory=Place to make electronic components.
 
 [technology-name]
 
