--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -19,6 +19,9 @@ capacitor1=Capacitor 1
 resistor1=Resistor 1
 graphite=Graphite
 valve=Vacuum tube
+fiberboard=Fiberboard
+formica=Formica
+pcb1=Printed Circuit Substrate 1
 
 [item-description]
 clay=just clay
@@ -29,12 +32,16 @@ capacitor1=First generation of capacitors
 inductor1=First generation of inductors
 resistor1=First generation of resistors
 valve= First generation of transistors
+formica=Basic pressed wood
+pcb1=First generation PCS
 
 [fluid-name]
 methane=Methane
 methanal=Formaldehyde
 ammonia=Ammonia
 cyanic-acid=Cyanic Acid
+black-liquor=Black Liquor
+tall-oil=Tall Oil
 
 [entity-name]
 phosphate-rock=Ancient Remains
@@ -44,6 +51,8 @@ moondrop-greenhouse=Moondrop Greenhouse
 fbreactor=F.B.Reactor
 auog-paddock=Auog paddock
 electronics-factory=Electronics Factory
+pulp-mill=Pulp Mill
+pcb-factory=PCB Factory
 
 [entity-description]
 auog-paddock=Shy night creatures known as Aougs.
@@ -53,6 +62,8 @@ clay-pit=Building to mix and extract clay from ground.
 moondrop-greenhouse=Place to grow the Moondrops, an alien plant which produces methane.
 fbreactor=Basic fluidized bed reactor.
 electronics-factory=Place to make electronic components.
+pulp-mill=Further processing of organic based solids.
+pcb-factory=Automated PCB assembling machine.
 
 [technology-name]
 
