--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,5 +1,8 @@
 [recipe-name]
 urea-decomposition=Urea decomposition
+fluidize-coke=Coke fluidization
+tall-oil-separation=Tall-Oil Separation
+phosphoric-acid=Phosphorous acid distillation
 
 [recipe-description]
 
@@ -22,6 +25,8 @@ valve=Vacuum tube
 fiberboard=Fiberboard
 formica=Formica
 pcb1=Printed Circuit Substrate 1
+circuit-board-1=Circuit board 1
+powdered-phosphate-rock=Powdered Phosphate Rock
 
 [item-description]
 clay=just clay
@@ -34,6 +39,7 @@ resistor1=First generation of resistors
 valve= First generation of transistors
 formica=Basic pressed wood
 pcb1=First generation PCS
+circuit-board-1=First generation circuit
 
 [fluid-name]
 methane=Methane
@@ -42,6 +48,10 @@ ammonia=Ammonia
 cyanic-acid=Cyanic Acid
 black-liquor=Black Liquor
 tall-oil=Tall Oil
+benzene=Benzene
+phosphorous-acid=Phosphorous Acid
+phosphine-gas=Phosphine Gas
+propene=Propene
 
 [entity-name]
 phosphate-rock=Ancient Remains
@@ -53,6 +63,7 @@ auog-paddock=Auog paddock
 electronics-factory=Electronics Factory
 pulp-mill=Pulp Mill
 pcb-factory=PCB Factory
+chipshooter=Chipshooter machine
 
 [entity-description]
 auog-paddock=Shy night creatures known as Aougs.
@@ -64,12 +75,13 @@ fbreactor=Basic fluidized bed reactor.
 electronics-factory=Place to make electronic components.
 pulp-mill=Further processing of organic based solids.
 pcb-factory=Automated PCB assembling machine.
+chipshooter=High speed component assembly.
 
 [technology-name]
-
+basic-electronics=Basic Electronics
 
 [technology-description]
-
+basic-electronics=Unlock basic electronic processes and components
 
 [tile-name]
 
