added new resource

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -3,6 +3,8 @@ urea-decomposition=Urea decomposition
 fluidize-coke=Coke fluidization
 tall-oil-separation=Tall-Oil Separation
 phosphoric-acid=Phosphorous acid distillation
+light-n=Doping Silicon to N light type
+heavy-n=Doping Silicon to N heavy type
 
 [recipe-description]
 
@@ -27,6 +29,8 @@ formica=Formica
 pcb1=Printed Circuit Substrate 1
 circuit-board-1=Circuit board 1
 powdered-phosphate-rock=Powdered Phosphate Rock
+light-n=Light N doped Silicon
+heavy-n=Heavy N doped Silicon
 
 [item-description]
 clay=just clay
@@ -55,7 +59,9 @@ propene=Propene
 
 [entity-name]
 phosphate-rock=Ancient Remains
+rare-earth-bolide=Rare Earth Bolide
 phosphate-mine=Phosphate Mine
+rare-earth-mine=Rare Earth Extractor
 clay-pit=Clay-pit
 moondrop-greenhouse=Moondrop Greenhouse
 fbreactor=F.B.Reactor
@@ -68,7 +74,9 @@ chipshooter=Chipshooter machine
 [entity-description]
 auog-paddock=Shy night creatures known as Aougs.
 phosphate-rock=Remains of ancient life.
+rare-earth-bolide=A gift from the sky.
 phosphate-mine=Building to extract phosphate from phosphate-rich rocks.
+rare-earth-mine=Building to extract all the rare-earth of the bolide.
 clay-pit=Building to mix and extract clay from ground.
 moondrop-greenhouse=Place to grow the Moondrops, an alien plant which produces methane.
 fbreactor=Basic fluidized bed reactor.
@@ -87,6 +95,8 @@ basic-electronics=Unlock basic electronic processes and components
 
 [ore-name]
 phosphate-rock=Phosphate Rock
+rare-earth-ore=Rare Earth Ore
 
 [autoplace-control-names]
 phosphate-rock=Phosphate Rock
+rare-earth-bolide=Rare Earth Bolide
