added-more stuff
cant make the rare-earth-mine work :/


Former-commit-id: a4ad2a48161c1e4249170fadb44c8aef62ea1698
Former-commit-id: 453d65cca3b888cef3fe96cfa574997ed2b2cbc1

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -5,6 +5,10 @@ tall-oil-separation=Tall-Oil Separation
 phosphoric-acid=Phosphorous acid distillation
 light-n=Doping Silicon to N light type
 heavy-n=Doping Silicon to N heavy type
+p-dope=Doping Silicon to P type
+crusher-ree=Crush rare-earth Ores
+milling-ree=Milling rare-earth powder
+cumene-distilation=Distilation of Cumene
 
 [recipe-description]
 
@@ -14,6 +18,7 @@ py-hightech=Py HighTech
 
 [item-name]
 phosphate-rock=Phosphate Rock
+rare-earth-ore=Rare Earth Ore
 clay=Clay
 melamine=Melamine
 melamine-resin=Melamine Resin
@@ -27,10 +32,20 @@ valve=Vacuum tube
 fiberboard=Fiberboard
 formica=Formica
 pcb1=Printed Circuit Substrate 1
+pcb2=Printed Circuit Substrate 2
 circuit-board-1=Circuit board 1
 powdered-phosphate-rock=Powdered Phosphate Rock
 light-n=Light N doped Silicon
 heavy-n=Heavy N doped Silicon
+p-dope=P doped Silicon
+rare-earth-powder=Rare Earth Powder
+rare-earth-dust=Rare Earth Dust
+ree-concentrate=Rare Earth Concentrate
+reo=Rare Earth Oxides
+transistor=Transistor
+phenol=Phenol
+phenolicboard=Phenolic Board
+bakelite=Bakelite
 
 [item-description]
 clay=just clay
@@ -44,6 +59,9 @@ valve= First generation of transistors
 formica=Basic pressed wood
 pcb1=First generation PCS
 circuit-board-1=First generation circuit
+rare-earth-ore=Even more rare than on Earth
+rare-earth-powder=First step of REE production
+rare-earth-dust=Second step of REE production
 
 [fluid-name]
 methane=Methane
@@ -54,8 +72,13 @@ black-liquor=Black Liquor
 tall-oil=Tall Oil
 benzene=Benzene
 phosphorous-acid=Phosphorous Acid
+phosphoric-acid=Phosphoric Acid
 phosphine-gas=Phosphine Gas
 propene=Propene
+ree-slurry=Rare Earth Slurry
+ree-solution=Rare Earth Solution
+cumene=Cumene
+acetone=Acetone
 
 [entity-name]
 phosphate-rock=Ancient Remains
@@ -87,9 +110,13 @@ chipshooter=High speed component assembly.
 
 [technology-name]
 basic-electronics=Basic Electronics
+semiconductor-doping=Semiconductor Doping
+rare-earth-tech=Rare Earth Technology
 
 [technology-description]
 basic-electronics=Unlock basic electronic processes and components
+semiconductor-doping=Unlock doping technology by vapor deposition
+rare-earth-tech=Give access to explore the Rare Earth Elements.
 
 [tile-name]
 
