added-more stuff

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -27,6 +27,7 @@ ceramic=Ceramic
 inductor1=Inductor 1
 capacitor1=Capacitor 1
 resistor1=Resistor 1
+resistor2=Resistor 2
 graphite=Graphite
 valve=Vacuum tube
 fiberboard=Fiberboard
@@ -46,6 +47,10 @@ transistor=Transistor
 phenol=Phenol
 phenolicboard=Phenolic Board
 bakelite=Bakelite
+cermet=Cermet
+crude-cermet=Crude Cermet
+microchip=Microchip
+fecr-alloy=FerroChromium Alloy
 
 [item-description]
 clay=just clay
