finished-red circuit
Former-commit-id: feaef4ee384f5c036f7e2bc737df50501651a4f2
Former-commit-id: 71bc9c1576449a764066296d54f9ef0260916cf9

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -25,16 +25,22 @@ melamine-resin=Melamine Resin
 urea=Urea
 ceramic=Ceramic
 inductor1=Inductor 1
+inductor2=Inductor 2
 capacitor1=Capacitor 1
+capacitor2=Capacitor 2
 resistor1=Resistor 1
 resistor2=Resistor 2
 graphite=Graphite
 valve=Vacuum tube
+diode=Diode
+transistor=Transistor
+microchip=Microchip
 fiberboard=Fiberboard
 formica=Formica
 pcb1=Printed Circuit Substrate 1
 pcb2=Printed Circuit Substrate 2
 circuit-board-1=Circuit board 1
+circuit-board-2=Circuit board 2
 powdered-phosphate-rock=Powdered Phosphate Rock
 light-n=Light N doped Silicon
 heavy-n=Heavy N doped Silicon
@@ -43,14 +49,13 @@ rare-earth-powder=Rare Earth Powder
 rare-earth-dust=Rare Earth Dust
 ree-concentrate=Rare Earth Concentrate
 reo=Rare Earth Oxides
-transistor=Transistor
 phenol=Phenol
 phenolicboard=Phenolic Board
 bakelite=Bakelite
 cermet=Cermet
 crude-cermet=Crude Cermet
-microchip=Microchip
 fecr-alloy=FerroChromium Alloy
+
 
 [item-description]
 clay=just clay
