added more stuf

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -55,6 +55,11 @@ bakelite=Bakelite
 cermet=Cermet
 crude-cermet=Crude Cermet
 fecr-alloy=FerroChromium Alloy
+silicon=Silicon
+glass-fiber=Glass Fiber
+bisphenol-a=Bisphenol A
+epoxy=Epoxy
+fiberglass=Fiberglass
 
 
 [item-description]
@@ -72,6 +77,8 @@ circuit-board-1=First generation circuit
 rare-earth-ore=Even more rare than on Earth
 rare-earth-powder=First step of REE production
 rare-earth-dust=Second step of REE production
+bisphenol-a=Keep away from your body
+epoxy=Multi-purpose resin
 
 [fluid-name]
 methane=Methane
@@ -89,6 +96,7 @@ ree-slurry=Rare Earth Slurry
 ree-solution=Rare Earth Solution
 cumene=Cumene
 acetone=Acetone
+ech=Epichlorohydrin(ECH)
 
 [entity-name]
 phosphate-rock=Ancient Remains
@@ -120,11 +128,13 @@ chipshooter=High speed component assembly.
 
 [technology-name]
 basic-electronics=Basic Electronics
+advanced-electronics=Advanced Electronics
 semiconductor-doping=Semiconductor Doping
 rare-earth-tech=Rare Earth Technology
 
 [technology-description]
 basic-electronics=Unlock basic electronic processes and components
+advanced-electronics=Unlock advanced electronic processes and components
 semiconductor-doping=Unlock doping technology by vapor deposition
 rare-earth-tech=Give access to explore the Rare Earth Elements.
 
