added the whole graphene chain
Former-commit-id: 67539e86704e239bab4f79cbe18ff3923b5d9fa1
Former-commit-id: 42af8bf86a2086d44b2dcee05a2294df02cee972

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -60,7 +60,11 @@ glass-fiber=Glass Fiber
 bisphenol-a=Bisphenol A
 epoxy=Epoxy
 fiberglass=Fiberglass
-
+pdms=PDMS (Polydimethylsiloxane)
+nic-core=Nic Core
+pdms-graphene=PDMS-Graphene base
+graphene-sheet=Graphene Sheet
+graphene-roll=Graphene Roll
 
 [item-description]
 clay=just clay
@@ -79,6 +83,8 @@ rare-earth-powder=First step of REE production
 rare-earth-dust=Second step of REE production
 bisphenol-a=Keep away from your body
 epoxy=Multi-purpose resin
+pdms=Special gel to work into nano-tech.
+nic-core=Nickel based core.
 
 [fluid-name]
 methane=Methane
@@ -97,6 +103,9 @@ ree-solution=Rare Earth Solution
 cumene=Cumene
 acetone=Acetone
 ech=Epichlorohydrin(ECH)
+chloromethane=Chloromethane
+dimethyldichlorosilane=Dimethyldichlorosilane
+
 
 [entity-name]
 phosphate-rock=Ancient Remains
@@ -111,6 +120,7 @@ electronics-factory=Electronics Factory
 pulp-mill=Pulp Mill
 pcb-factory=PCB Factory
 chipshooter=Chipshooter machine
+nano-assembler=Nano assembler
 
 [entity-description]
 auog-paddock=Shy night creatures known as Aougs.
@@ -125,18 +135,21 @@ electronics-factory=Place to make electronic components.
 pulp-mill=Further processing of organic based solids.
 pcb-factory=Automated PCB assembling machine.
 chipshooter=High speed component assembly.
+nano-assembler=Place to build nano-mechanisms and components.
 
 [technology-name]
 basic-electronics=Basic Electronics
 advanced-electronics=Advanced Electronics
 semiconductor-doping=Semiconductor Doping
 rare-earth-tech=Rare Earth Technology
+graphene=Graphene Technology
 
 [technology-description]
 basic-electronics=Unlock basic electronic processes and components
 advanced-electronics=Unlock advanced electronic processes and components
 semiconductor-doping=Unlock doping technology by vapor deposition
 rare-earth-tech=Give access to explore the Rare Earth Elements.
+graphene=Unlock graphene technologies and production.
 
 [tile-name]
 
