--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -30,6 +30,7 @@ capacitor1=Capacitor 1
 capacitor2=Capacitor 2
 resistor1=Resistor 1
 resistor2=Resistor 2
+resistor3=Resistor 3
 graphite=Graphite
 valve=Vacuum tube
 diode=Diode
@@ -39,12 +40,15 @@ fiberboard=Fiberboard
 formica=Formica
 pcb1=Printed Circuit Substrate 1
 pcb2=Printed Circuit Substrate 2
+pcb3=Printed Circuit Substrate 3
+pcb3-2=Mounted Circuit Substrate
 circuit-board-1=Circuit board 1
 circuit-board-2=Circuit board 2
 powdered-phosphate-rock=Powdered Phosphate Rock
 light-n=Light N doped Silicon
 heavy-n=Heavy N doped Silicon
 p-dope=P doped Silicon
+heavy-p-type=Heavy P doped Silicon
 rare-earth-powder=Rare Earth Powder
 rare-earth-dust=Rare Earth Dust
 ree-concentrate=Rare Earth Concentrate
@@ -56,7 +60,7 @@ cermet=Cermet
 crude-cermet=Crude Cermet
 fecr-alloy=FerroChromium Alloy
 silicon=Silicon
-glass-fiber=Glass Fiber
+glass-fiber=Glass Fibers
 bisphenol-a=Bisphenol A
 epoxy=Epoxy
 fiberglass=Fiberglass
@@ -65,6 +69,12 @@ nic-core=Nic Core
 pdms-graphene=PDMS-Graphene base
 graphene-sheet=Graphene Sheet
 graphene-roll=Graphene Roll
+processor-core=Processor Core
+processor=Processor
+phosphate-glass=Phosphate Glass
+high-flux-core=High Flux Core
+stone-wool=Stone Wool
+
 
 [item-description]
 clay=just clay
@@ -105,6 +115,8 @@ acetone=Acetone
 ech=Epichlorohydrin(ECH)
 chloromethane=Chloromethane
 dimethyldichlorosilane=Dimethyldichlorosilane
+dms=Dimethyl sulfide(DMS)
+msa=Methanesulfonic acid(MSA)
 
 
 [entity-name]
@@ -121,6 +133,7 @@ pulp-mill=Pulp Mill
 pcb-factory=PCB Factory
 chipshooter=Chipshooter machine
 nano-assembler=Nano assembler
+cadaveric-arum=Cadaveric Arum Greenhouse
 
 [entity-description]
 auog-paddock=Shy night creatures known as Aougs.
@@ -136,6 +149,7 @@ pulp-mill=Further processing of organic based solids.
 pcb-factory=Automated PCB assembling machine.
 chipshooter=High speed component assembly.
 nano-assembler=Place to build nano-mechanisms and components.
+cadaveric-arum=Green house to grow the Cadaveric arums, a smelly plant who produces sulfur-based gases.
 
 [technology-name]
 basic-electronics=Basic Electronics
