--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -26,14 +26,17 @@ urea=Urea
 ceramic=Ceramic
 inductor1=Inductor 1
 inductor2=Inductor 2
+inductor3=Inductor 3
 capacitor1=Capacitor 1
 capacitor2=Capacitor 2
+capacitor3=Capacitor 3
 resistor1=Resistor 1
 resistor2=Resistor 2
 resistor3=Resistor 3
 graphite=Graphite
 valve=Vacuum tube
 diode=Diode
+diode3=SMD Diode
 transistor=Transistor
 microchip=Microchip
 fiberboard=Fiberboard
@@ -74,6 +77,10 @@ processor=Processor
 phosphate-glass=Phosphate Glass
 high-flux-core=High Flux Core
 stone-wool=Stone Wool
+re-tin=RE-Tin Alloy
+diode-core=Diode Core
+capacitor-core=Capacitor Core
+capacitor-termination=Capacitor Termination
 
 
 [item-description]
