--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -45,9 +45,9 @@ pcb1=Printed Circuit Substrate 1
 pcb2=Printed Circuit Substrate 2
 pcb3=Printed Circuit Substrate 3
 pcb3-2=Mounted Circuit Substrate
-circuit-board-1=Circuit board 1
-circuit-board-2=Circuit board 2
-circuit-board-3=Circuit board 3
+electronic-circuit=Circuit board 1
+advanced-circuit-2=Circuit board 2
+processing-unit=Circuit board 3
 powdered-phosphate-rock=Powdered Phosphate Rock
 light-n=Light N doped Silicon
 heavy-n=Heavy N doped Silicon
