--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -82,6 +82,13 @@ re-tin=RE-Tin Alloy
 diode-core=Diode Core
 capacitor-core=Capacitor Core
 capacitor-termination=Capacitor Termination
+carbon-dust=Fine carbon dust
+biopolymer=Biopolymer
+carbon-nanotube=Carbon nanotubes
+sodium-silicate=Sodium Silicate
+silica-powder=Silica Powder
+colloidal-silica=Colloidal Silica
+nanochip=Nano-chip
 
 
 [item-description]
@@ -103,6 +110,7 @@ bisphenol-a=Keep away from your body
 epoxy=Multi-purpose resin
 pdms=Special gel to work into nano-tech.
 nic-core=Nickel based core.
+biopolymer=Advanced material for several purposes.
 
 [fluid-name]
 methane=Methane
@@ -125,7 +133,7 @@ chloromethane=Chloromethane
 dimethyldichlorosilane=Dimethyldichlorosilane
 dms=Dimethyl sulfide(DMS)
 msa=Methanesulfonic acid(MSA)
-
+bacteria-2=Knallgas Bacteria
 
 [entity-name]
 phosphate-rock=Ancient Remains
@@ -165,6 +173,7 @@ advanced-electronics=Advanced Electronics
 semiconductor-doping=Semiconductor Doping
 rare-earth-tech=Rare Earth Technology
 graphene=Graphene Technology
+nano-tech=Nanotechnology
 
 [technology-description]
 basic-electronics=Unlock basic electronic processes and components
@@ -172,6 +181,7 @@ advanced-electronics=Unlock advanced electronic processes and components
 semiconductor-doping=Unlock doping technology by vapor deposition
 rare-earth-tech=Give access to explore the Rare Earth Elements.
 graphene=Unlock graphene technologies and production.
+nano-tech=Unlock nano-components and technologies.
 
 [tile-name]
 
