Added- Kicalk-plantation

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -89,6 +89,7 @@ sodium-silicate=Sodium Silicate
 silica-powder=Silica Powder
 colloidal-silica=Colloidal Silica
 nanochip=Nano-chip
+raw-fiber=Raw Fiber
 
 
 [item-description]
@@ -150,6 +151,7 @@ pcb-factory=PCB Factory
 chipshooter=Chipshooter machine
 nano-assembler=Nano assembler
 cadaveric-arum=Cadaveric Arum Greenhouse
+kicalk-plantation=Kicalk Plantation
 
 [entity-description]
 auog-paddock=Shy night creatures known as Aougs.
@@ -166,6 +168,7 @@ pcb-factory=Automated PCB assembling machine.
 chipshooter=High speed component assembly.
 nano-assembler=Place to build nano-mechanisms and components.
 cadaveric-arum=Green house to grow the Cadaveric arums, a smelly plant who produces sulfur-based gases.
+kicalk-plantation=Very useful FLUFFY trees where we can get high-quality fibers.
 
 [technology-name]
 basic-electronics=Basic Electronics
