--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -90,6 +90,11 @@ silica-powder=Silica Powder
 colloidal-silica=Colloidal Silica
 nanochip=Nano-chip
 raw-fiber=Raw Fiber
+fiber=Fiber
+micro-fiber=Microfiber
+resorcinol=Resorcinol
+rf-gel=RF-gel
+clean-rf-gel=Clean RF-gel
 
 
 [item-description]
@@ -112,6 +117,7 @@ epoxy=Multi-purpose resin
 pdms=Special gel to work into nano-tech.
 nic-core=Nickel based core.
 biopolymer=Advanced material for several purposes.
+rf-gel=Resorcinol-formaldehyde gel
 
 [fluid-name]
 methane=Methane
@@ -135,6 +141,7 @@ dimethyldichlorosilane=Dimethyldichlorosilane
 dms=Dimethyl sulfide(DMS)
 msa=Methanesulfonic acid(MSA)
 bacteria-2=Knallgas Bacteria
+soaked-gel=Soaked gel
 
 [entity-name]
 phosphate-rock=Ancient Remains
@@ -177,6 +184,7 @@ semiconductor-doping=Semiconductor Doping
 rare-earth-tech=Rare Earth Technology
 graphene=Graphene Technology
 nano-tech=Nanotechnology
+aerogel=Aerogel
 
 [technology-description]
 basic-electronics=Unlock basic electronic processes and components
@@ -185,6 +193,7 @@ semiconductor-doping=Unlock doping technology by vapor deposition
 rare-earth-tech=Give access to explore the Rare Earth Elements.
 graphene=Unlock graphene technologies and production.
 nano-tech=Unlock nano-components and technologies.
+aerogel=Unlock aerogel technology.
 
 [tile-name]
 
