--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -92,9 +92,15 @@ nanochip=Nano-chip
 raw-fiber=Raw Fiber
 fiber=Fiber
 micro-fiber=Microfiber
+sub-denier-microfiber=Sub-denier Microfiber
 resorcinol=Resorcinol
 rf-gel=RF-gel
-clean-rf-gel=Clean RF-gel
+clean-rf-gel=Clear RF gel
+aerogel=Aerogel
+carbon-aerogel=Carbon Aerogel
+kondo-substrate=Kondo Substrate
+kondo-core=Kondo Core
+heavy-fermion=Heavy Fermion Material
 
 
 [item-description]
@@ -117,7 +123,10 @@ epoxy=Multi-purpose resin
 pdms=Special gel to work into nano-tech.
 nic-core=Nickel based core.
 biopolymer=Advanced material for several purposes.
-rf-gel=Resorcinol-formaldehyde gel
+rf-gel=Resorcinol-formaldehyde gel.
+kondo-substrate=Place to build the powerful kondo-processor
+heavy-fermion=Unconventional superconductor.
+
 
 [fluid-name]
 methane=Methane
@@ -142,6 +151,7 @@ dms=Dimethyl sulfide(DMS)
 msa=Methanesulfonic acid(MSA)
 bacteria-2=Knallgas Bacteria
 soaked-gel=Soaked gel
+acrolein=Acrolein
 
 [entity-name]
 phosphate-rock=Ancient Remains
