added more stuff
Former-commit-id: e161d5bddcb6b246d6f532f655f0fc69270c9a37
Former-commit-id: 426c2f2157e168bdcc3faefd97e7e20bb5974dd2

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -100,8 +100,16 @@ aerogel=Aerogel
 carbon-aerogel=Carbon Aerogel
 kondo-substrate=Kondo Substrate
 kondo-core=Kondo Core
+kondo-processor=Kondo Processor
 heavy-fermion=Heavy Fermion Material
-
+crco-alloy=Chromium-Cobalt Alloy
+nxag-matrix=Nexelit-Silver Matrix
+paradiamatic-resistor=Paradiamatic Resistor
+zinc-acetate=Zinc Acetate
+dry-ralesia=Dry Ralesia
+ralesia-powder=Ralesia Powder
+zinc-nanocompound=Zinc Nanocompound
+zno-nanoparticles=Zinc-Oxide Nanoparticles
 
 [item-description]
 clay=just clay
@@ -126,7 +134,7 @@ biopolymer=Advanced material for several purposes.
 rf-gel=Resorcinol-formaldehyde gel.
 kondo-substrate=Place to build the powerful kondo-processor
 heavy-fermion=Unconventional superconductor.
-
+kondo-processor=Able to make 1pt of Kondo calculations per second.
 
 [fluid-name]
 methane=Methane
@@ -152,6 +160,10 @@ msa=Methanesulfonic acid(MSA)
 bacteria-2=Knallgas Bacteria
 soaked-gel=Soaked gel
 acrolein=Acrolein
+acetic-acid=Acetic Acid
+raw-ralesia-extract=Raw Ralesia Extract
+ralesia-extract=Ralesia Extract
+zinc-nanocompound=Zinc Nanocompound
 
 [entity-name]
 phosphate-rock=Ancient Remains
