added more stuff
Former-commit-id: 67ea71c77d387a5d33ceede858b76d2db7b4448c
Former-commit-id: 276f691b02173d5722556260240e58a83c46c13e

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -109,7 +109,9 @@ zinc-acetate=Zinc Acetate
 dry-ralesia=Dry Ralesia
 ralesia-powder=Ralesia Powder
 zinc-nanocompound=Zinc Nanocompound
+zinc-nanocomplex=Zinc Nanocomplex
 zno-nanoparticles=Zinc-Oxide Nanoparticles
+csle-diode=Cross-section Light-emitting Diode
 
 [item-description]
 clay=just clay
@@ -163,7 +165,6 @@ acrolein=Acrolein
 acetic-acid=Acetic Acid
 raw-ralesia-extract=Raw Ralesia Extract
 ralesia-extract=Ralesia Extract
-zinc-nanocompound=Zinc Nanocompound
 
 [entity-name]
 phosphate-rock=Ancient Remains
