--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -112,6 +112,11 @@ zinc-nanocompound=Zinc Nanocompound
 zinc-nanocomplex=Zinc Nanocomplex
 zno-nanoparticles=Zinc-Oxide Nanoparticles
 csle-diode=Cross-section Light-emitting Diode
+ndfeb-alloy=NdFeB Alloy
+ndfeb-powder=NdFeB powder
+re-magnet=Rare Earth magnet
+sc-substrate=Superconductor Substrate
+superconductor=Superconductor
 
 [item-description]
 clay=just clay
@@ -137,6 +142,7 @@ rf-gel=Resorcinol-formaldehyde gel.
 kondo-substrate=Place to build the powerful kondo-processor
 heavy-fermion=Unconventional superconductor.
 kondo-processor=Able to make 1pt of Kondo calculations per second.
+ndfeb-alloy=Neodimium-Iron-Boron alloy.
 
 [fluid-name]
 methane=Methane
