finished last level
Former-commit-id: d0619deefaf95754a5b74e5a1636d5040ca10b9f
Former-commit-id: c26fb400c3aa6cc935573dcf96c779ea44e70082

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -45,8 +45,9 @@ pcb1=Printed Circuit Substrate 1
 pcb2=Printed Circuit Substrate 2
 pcb3=Printed Circuit Substrate 3
 pcb3-2=Mounted Circuit Substrate
+pcb4=Printed Circuit Substrate 4
 electronic-circuit=Circuit board 1
-advanced-circuit-2=Circuit board 2
+advanced-circuit=Circuit board 2
 processing-unit=Circuit board 3
 powdered-phosphate-rock=Powdered Phosphate Rock
 light-n=Light N doped Silicon
@@ -117,6 +118,12 @@ ndfeb-powder=NdFeB powder
 re-magnet=Rare Earth magnet
 sc-substrate=Superconductor Substrate
 superconductor=Superconductor
+fault-current-inductor=Fault-Current Inductor
+nanocrystaline-core=Nanocrystaline Core
+supercapacitor=Supercapacitor
+supercapacitor-core=Supercapacitor Core
+supercapacitor-shell=Supercapacitor Shell
+intelligent-unit=Intelligent Unit
 
 [item-description]
 clay=just clay
@@ -143,6 +150,7 @@ kondo-substrate=Place to build the powerful kondo-processor
 heavy-fermion=Unconventional superconductor.
 kondo-processor=Able to make 1pt of Kondo calculations per second.
 ndfeb-alloy=Neodimium-Iron-Boron alloy.
+intelligent-unit=Can you prove your purpose?
 
 [fluid-name]
 methane=Methane
