--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -124,6 +124,7 @@ supercapacitor=Supercapacitor
 supercapacitor-core=Supercapacitor Core
 supercapacitor-shell=Supercapacitor Shell
 intelligent-unit=Intelligent Unit
+zipir-carcass=Zipir Carcass
 
 [item-description]
 clay=just clay
@@ -151,6 +152,7 @@ heavy-fermion=Unconventional superconductor.
 kondo-processor=Able to make 1pt of Kondo calculations per second.
 ndfeb-alloy=Neodimium-Iron-Boron alloy.
 intelligent-unit=Can you prove your purpose?
+zipir-carcass=It was killed with mercy.
 
 [fluid-name]
 methane=Methane
@@ -196,6 +198,7 @@ chipshooter=Chipshooter machine
 nano-assembler=Nano assembler
 cadaveric-arum=Cadaveric Arum Greenhouse
 kicalk-plantation=Kicalk Plantation
+zipir=Zipir Artificial Reef
 
 [entity-description]
 auog-paddock=Shy night creatures known as Aougs.
@@ -213,6 +216,7 @@ chipshooter=High speed component assembly.
 nano-assembler=Place to build nano-mechanisms and components.
 cadaveric-arum=Green house to grow the Cadaveric arums, a smelly plant who produces sulfur-based gases.
 kicalk-plantation=Very useful FLUFFY trees where we can get high-quality fibers.
+zipir=Place to raise the peaciful Zipirs in dry land.
 
 [technology-name]
 basic-electronics=Basic Electronics
