--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -9,6 +9,7 @@ p-dope=Doping Silicon to P type
 crusher-ree=Crush rare-earth Ores
 milling-ree=Milling rare-earth powder
 cumene-distilation=Distilation of Cumene
+rendering=Zipir Rendering
 
 [recipe-description]
 
@@ -125,6 +126,9 @@ supercapacitor-core=Supercapacitor Core
 supercapacitor-shell=Supercapacitor Shell
 intelligent-unit=Intelligent Unit
 zipir-carcass=Zipir Carcass
+bones=Bones
+skin=Skin
+meat=Meat
 
 [item-description]
 clay=just clay
@@ -181,6 +185,7 @@ acrolein=Acrolein
 acetic-acid=Acetic Acid
 raw-ralesia-extract=Raw Ralesia Extract
 ralesia-extract=Ralesia Extract
+blood=Blood
 
 [entity-name]
 phosphate-rock=Ancient Remains
