--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -130,6 +130,13 @@ bones=Bones
 skin=Skin
 meat=Meat
 py-fertilizer=Fertilizer
+rayon=Rayon
+blood-meal=Blood meal
+nylon=Nylon
+nylon-parts=Nylon parts
+collagen=Collagen
+resilin=Resilin
+hyperelastic-material=Hyperelastic material
 
 [item-description]
 clay=just clay
@@ -158,6 +165,7 @@ kondo-processor=Able to make 1pt of Kondo calculations per second.
 ndfeb-alloy=Neodimium-Iron-Boron alloy.
 intelligent-unit=Can you prove your purpose?
 zipir-carcass=It was killed with mercy.
+rayon=Advanced fiber with many uses.
 
 [fluid-name]
 methane=Methane
@@ -187,6 +195,8 @@ acetic-acid=Acetic Acid
 raw-ralesia-extract=Raw Ralesia Extract
 ralesia-extract=Ralesia Extract
 blood=Blood
+carbon-sulfide=Carbon sulfide
+etching=Etching Solution
 
 [entity-name]
 phosphate-rock=Ancient Remains
