finished hightech science

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -137,6 +137,14 @@ nylon-parts=Nylon parts
 collagen=Collagen
 resilin=Resilin
 hyperelastic-material=Hyperelastic material
+nano-wires=Nano-wires
+nems=Nanoelectromechanical Systems
+lithium-chloride=Lithium Chloride
+volumetric-capacitor=Volumetric Energy Capacitor
+yag-laser-module=YAG Laser Module
+laser-module=Laser Module
+lithium-niobate=Lithium Niobate
+parametric-oscilator=Optical Parametric Oscilator
 
 [item-description]
 clay=just clay
@@ -166,6 +174,8 @@ ndfeb-alloy=Neodimium-Iron-Boron alloy.
 intelligent-unit=Can you prove your purpose?
 zipir-carcass=It was killed with mercy.
 rayon=Advanced fiber with many uses.
+nems=Nanomachines with a bright future.
+yag-laser-module=Yttrium-aluminum-garnet crystal used for solid-state lasers.
 
 [fluid-name]
 methane=Methane
