--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -225,6 +225,8 @@ nano-assembler=Nano assembler
 cadaveric-arum=Cadaveric Arum Greenhouse
 kicalk-plantation=Kicalk Plantation
 zipir=Zipir Artificial Reef
+cr-01= Construction Pynobot MK01
+py-roboport-mk01= Py Roboport MK01
 
 [entity-description]
 auog-paddock=Shy night creatures known as Aougs.
