Added cargo pynobots
Former-commit-id: f0fdc0552e4e37836e16ac88cc4c2f17d72c9af0
Former-commit-id: 8fe7200a4c7a1bce6ad778767394e2d640cb3b3d

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -226,6 +226,7 @@ cadaveric-arum=Cadaveric Arum Greenhouse
 kicalk-plantation=Kicalk Plantation
 zipir=Zipir Artificial Reef
 cr-01= Construction Pynobot MK01
+cargo-01=Cargo Pynobot MK01
 py-roboport-mk01= Py Roboport MK01
 
 [entity-description]
