Added the high-tech robots plus more balances.
Former-commit-id: bcfd02da47101fb5ee4c65d1500153af4e150786
Former-commit-id: 91cff8a2d56e6404b8a9c1cf7a7185fffa293e3f

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -145,6 +145,12 @@ yag-laser-module=YAG Laser Module
 laser-module=Laser Module
 lithium-niobate=Lithium Niobate
 parametric-oscilator=Optical Parametric Oscilator
+myoglobin=Myoglobin
+paramagnetic-material=Paramagnetic material
+diamagnetic-material=Diamagnetic material
+superconductor-servomechanims=Superconductor Servomechanims
+harmonic-absorber=Harmonic Absorber
+pyrolytic-carbon=Pyrolytic carbon
 
 [item-description]
 clay=just clay
@@ -176,6 +182,8 @@ zipir-carcass=It was killed with mercy.
 rayon=Advanced fiber with many uses.
 nems=Nanomachines with a bright future.
 yag-laser-module=Yttrium-aluminum-garnet crystal used for solid-state lasers.
+myoglobin=Muscle protein.
+pyrolytic-carbon=Bad burned graphene.
 
 [fluid-name]
 methane=Methane
@@ -227,6 +235,7 @@ kicalk-plantation=Kicalk Plantation
 zipir=Zipir Artificial Reef
 cr-01= Construction Pynobot MK01
 cargo-01=Cargo Pynobot MK01
+cargo-ht=HighTech Pynobot
 py-roboport-mk01= Py Roboport MK01
 
 [entity-description]
@@ -245,6 +254,7 @@ chipshooter=High speed component assembly.
 nano-assembler=Place to build nano-mechanisms and components.
 cadaveric-arum=Green house to grow the Cadaveric arums, a smelly plant who produces sulfur-based gases.
 kicalk-plantation=Very useful FLUFFY trees where we can get high-quality fibers.
+cargo-ht=High-speed, high-cargo, low energy advanced robot to satisfy all your needs.
 zipir=Place to raise the peaciful Zipirs in dry land.
 
 [technology-name]
@@ -255,6 +265,7 @@ rare-earth-tech=Rare Earth Technology
 graphene=Graphene Technology
 nano-tech=Nanotechnology
 aerogel=Aerogel
+earnshaw-theorem=Earnshaw´s theorem
 
 [technology-description]
 basic-electronics=Unlock basic electronic processes and components
@@ -264,6 +275,7 @@ rare-earth-tech=Give access to explore the Rare Earth Elements.
 graphene=Unlock graphene technologies and production.
 nano-tech=Unlock nano-components and technologies.
 aerogel=Unlock aerogel technology.
+earnshaw-theorem=Classic inverse-square magnetic forces by gravitational field.
 
 [tile-name]
 
