Quantum-computer added. Robots added.
Former-commit-id: e0f10b35ce66cfea3d7099c86bd2c47e5331262a
Former-commit-id: c3682a37436b5db8d788b6791bf7678272b20292

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -233,10 +233,12 @@ nano-assembler=Nano assembler
 cadaveric-arum=Cadaveric Arum Greenhouse
 kicalk-plantation=Kicalk Plantation
 zipir=Zipir Artificial Reef
-cr-01= Construction Pynobot MK01
+cr-01=Construction Pynobot MK01
+cr-ht=HighTech Construction Pynobot
 cargo-01=Cargo Pynobot MK01
-cargo-ht=HighTech Pynobot
+cargo-ht=HighTech Logistic Pynobot
 py-roboport-mk01= Py Roboport MK01
+quantum-computer=Quantum Computer
 
 [entity-description]
 auog-paddock=Shy night creatures known as Aougs.
@@ -254,8 +256,10 @@ chipshooter=High speed component assembly.
 nano-assembler=Place to build nano-mechanisms and components.
 cadaveric-arum=Green house to grow the Cadaveric arums, a smelly plant who produces sulfur-based gases.
 kicalk-plantation=Very useful FLUFFY trees where we can get high-quality fibers.
-cargo-ht=High-speed, high-cargo, low energy advanced robot to satisfy all your needs.
+cargo-ht=High-speed, high-cargo, low energy advanced logistic robot to satisfy all your needs.
+cr-ht=High-speed, high-cargo, low energy advanced construction robot to satisfy all your needs.
 zipir=Place to raise the peaciful Zipirs in dry land.
+quantum-computer=Invest into space simulation instead of sending rockets.
 
 [technology-name]
 basic-electronics=Basic Electronics
@@ -266,6 +270,7 @@ graphene=Graphene Technology
 nano-tech=Nanotechnology
 aerogel=Aerogel
 earnshaw-theorem=Earnshaw´s theorem
+quantum=Quantum Computing
 
 [technology-description]
 basic-electronics=Unlock basic electronic processes and components
@@ -276,6 +281,7 @@ graphene=Unlock graphene technologies and production.
 nano-tech=Unlock nano-components and technologies.
 aerogel=Unlock aerogel technology.
 earnshaw-theorem=Classic inverse-square magnetic forces by gravitational field.
+quantum=Unlock quantum technologies and the Quantum Computer.
 
 [tile-name]
 
