--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -151,6 +151,12 @@ diamagnetic-material=Diamagnetic material
 superconductor-servomechanims=Superconductor Servomechanims
 harmonic-absorber=Harmonic Absorber
 pyrolytic-carbon=Pyrolytic carbon
+nv-center=Nitrogen-vacancy center
+quantum-dots=Quantum dots
+pi-josephson-junction=Pi Josephson Junction
+var-josephson-junction=Varphi Josephson Junction
+quantum-vortex-storage-system=Quantum Vortex Storage-System
+bose-einstein-superfluid=Bose-Einstein Superfluid
 
 [item-description]
 clay=just clay
