added particle accelerator
Former-commit-id: 38e53824929376f5935aebf41e48a635f66f2d6d
Former-commit-id: 0d0efec375e81490c31849a89c925c78237d589c

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -10,6 +10,8 @@ crusher-ree=Crush rare-earth Ores
 milling-ree=Milling rare-earth powder
 cumene-distilation=Distilation of Cumene
 rendering=Zipir Rendering
+antimatter-fusion=Slow Reacting Antimatter
+steam-exchange5=Steam Exchange 5
 
 [recipe-description]
 
@@ -157,6 +159,7 @@ pi-josephson-junction=Pi Josephson Junction
 var-josephson-junction=Varphi Josephson Junction
 quantum-vortex-storage-system=Quantum Vortex Storage-System
 bose-einstein-superfluid=Bose-Einstein Superfluid
+antimatter=Antimatter
 
 [item-description]
 clay=just clay
@@ -242,6 +245,7 @@ zipir=Zipir Artificial Reef
 cr-ht=HighTech Construction Pynobot
 cargo-ht=HighTech Logistic Pynobot
 quantum-computer=Quantum Computer
+particle-accelerator=Particle Accelerator
 
 [entity-description]
 auog-paddock=Shy night creatures known as Aougs.
@@ -263,6 +267,7 @@ cargo-ht=High-speed, high-cargo, low energy advanced logistic robot to satisfy a
 cr-ht=High-speed, high-cargo, low energy advanced construction robot to satisfy all your needs.
 zipir=Place to raise the peaciful Zipirs in dry land.
 quantum-computer=Invest into space simulation instead of sending rockets.
+particle-accelerator=Ion Implementation and Nucleosynthesis.
 
 [technology-name]
 basic-electronics=Basic Electronics
@@ -274,6 +279,7 @@ nano-tech=Nanotechnology
 aerogel=Aerogel
 earnshaw-theorem=Earnshaw´s theorem
 quantum=Quantum Computing
+nucleo=Nucleosynthesis
 
 [technology-description]
 basic-electronics=Unlock basic electronic processes and components
@@ -285,6 +291,7 @@ nano-tech=Unlock nano-components and technologies.
 aerogel=Unlock aerogel technology.
 earnshaw-theorem=Classic inverse-square magnetic forces by gravitational field.
 quantum=Unlock quantum technologies and the Quantum Computer.
+nucleo=Entering into a dangerous area.
 
 [tile-name]
 
