Added-pa-recipes

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -12,6 +12,15 @@ cumene-distilation=Distilation of Cumene
 rendering=Zipir Rendering
 antimatter-fusion=Slow Reacting Antimatter
 steam-exchange5=Steam Exchange 5
+pa-aromatics=Breed Aromatics
+pa-benzene=Breed Benzene
+pa-chromium=Breed Chromium
+pa-coal=Breed Coal
+pa-niobium=Breed Niobium
+pa-propene=Breed Propene
+pa-silicon=Breed Silicon
+pa-uranium=Breed Uranium ore
+pa-uranium-235=Enrich uranium
 
 [recipe-description]
 
@@ -160,6 +169,9 @@ var-josephson-junction=Varphi Josephson Junction
 quantum-vortex-storage-system=Quantum Vortex Storage-System
 bose-einstein-superfluid=Bose-Einstein Superfluid
 antimatter=Antimatter
+crystallographic-substrate=Crystallographic Substrate
+proton-donor=Proton Donor
+proton-receiver=Proton Receiver
 
 [item-description]
 clay=just clay
