--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -254,8 +254,8 @@ nano-assembler=Nano assembler
 cadaveric-arum=Cadaveric Arum Greenhouse
 kicalk-plantation=Kicalk Plantation
 zipir=Zipir Artificial Reef
-cr-ht=HighTech Construction Pynobot
-cargo-ht=HighTech Logistic Pynobot
+construction-robot-ht=HighTech Construction Pyanobot
+logistic-robot-ht=HighTech Logistic Pyanobot
 quantum-computer=Quantum Computer
 particle-accelerator=Particle Accelerator
 
@@ -275,8 +275,8 @@ chipshooter=High speed component assembly.
 nano-assembler=Place to build nano-mechanisms and components.
 cadaveric-arum=Green house to grow the Cadaveric arums, a smelly plant who produces sulfur-based gases.
 kicalk-plantation=Very useful FLUFFY trees where we can get high-quality fibers.
-cargo-ht=High-speed, high-cargo, low energy advanced logistic robot to satisfy all your needs.
-cr-ht=High-speed, high-cargo, low energy advanced construction robot to satisfy all your needs.
+logistic-robot-ht=High-speed, high-cargo, low energy advanced logistic robot to satisfy all your needs.
+construction-robot-ht=High-speed, high-cargo, low energy advanced construction robot to satisfy all your needs.
 zipir=Place to raise the peaciful Zipirs in dry land.
 quantum-computer=Invest into space simulation instead of sending rockets.
 particle-accelerator=Ion Implementation and Nucleosynthesis.
