added-more-pa-recipes
Former-commit-id: 1e209bd576a05c87e1fb490bbf99af000586fc1f
Former-commit-id: cf62c3bc45a8c9ce2f14c0091f734b6dda9e5f5e

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -21,6 +21,19 @@ pa-propene=Breed Propene
 pa-silicon=Breed Silicon
 pa-uranium=Breed Uranium ore
 pa-uranium-235=Enrich uranium
+pa-aluminium=Breed Aluminium
+pa-boron=Breed Boron
+pa-cobalt=Breed Cobalt
+pa-diamond=Make Diamond
+pa-gold=Breed Gold
+pa-helium=Breed Helium
+pa-hydrogen=Breed Hydrogen
+pa-molybdenum=Breed Molybdenum
+pa-nickel=Breed Nickel
+pa-oxygen=Breed Oxygen
+pa-silver=Breed Silver
+pa-vanadium=Breed Vanadium
+pa-zinc=Breed Zinc
 
 [recipe-description]
 
@@ -172,6 +185,7 @@ antimatter=Antimatter
 crystallographic-substrate=Crystallographic Substrate
 proton-donor=Proton Donor
 proton-receiver=Proton Receiver
+lithium-chloride=Lithium Chloride
 
 [item-description]
 clay=just clay
