--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -249,6 +249,7 @@ ralesia-extract=Ralesia Extract
 blood=Blood
 carbon-sulfide=Carbon sulfide
 etching=Etching Solution
+nitrobenzene=Nitrobenzene
 
 [entity-name]
 phosphate-rock=Ancient Remains
