balances-pre-release
Former-commit-id: b8edd255033e30e2947763fb24be8f5aae17ca57
Former-commit-id: 9295356ce8174ef3cb31e5a0d345910137031085

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -34,6 +34,7 @@ pa-oxygen=Breed Oxygen
 pa-silver=Breed Silver
 pa-vanadium=Breed Vanadium
 pa-zinc=Breed Zinc
+random-science-pack=Sorted Science Pack
 
 [recipe-description]
 
@@ -185,6 +186,7 @@ antimatter=Antimatter
 crystallographic-substrate=Crystallographic Substrate
 proton-donor=Proton Donor
 proton-receiver=Proton Receiver
+dried-meat=Dried Meat
 
 [item-description]
 clay=just clay
