solved another deadlock

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -35,6 +35,7 @@ pa-silver=Breed Silver
 pa-vanadium=Breed Vanadium
 pa-zinc=Breed Zinc
 random-science-pack=Sorted Science Pack
+methane-combustion=Convert Methane to 550ºC Combustion Mixture.
 
 [recipe-description]
 
