balances and name typos

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -88,6 +88,7 @@ reo=Rare Earth Oxides
 phenol=Phenol
 phenolicboard=Phenolic Board
 bakelite=Bakelite
+silicon-wafer=Silicon Wafer
 cermet=Cermet
 crude-cermet=Crude Cermet
 fecr-alloy=FerroChromium Alloy
