--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -251,7 +251,7 @@ acetic-acid=Acetic Acid
 raw-ralesia-extract=Raw Ralesia Extract
 ralesia-extract=Ralesia Extract
 blood=Blood
-carbon-sulfide=Carbon sulfide
+carbon-sulfide=Carbonyl sulfide
 etching=Etching Solution
 nitrobenzene=Nitrobenzene
 
