--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -36,6 +36,7 @@ pa-vanadium=Breed Vanadium
 pa-zinc=Breed Zinc
 random-science-pack=Sorted Science Pack
 methane-combustion=Convert Methane to 550ºC Combustion Mixture.
+benzene-combustion=Convert Methane to 750ºC Combustion Mixture.
 
 [recipe-description]
 
@@ -235,6 +236,7 @@ phosphorous-acid=Phosphorous Acid
 phosphoric-acid=Phosphoric Acid
 phosphine-gas=Phosphine Gas
 propene=Propene
+ethylene=Ethylene
 ree-slurry=Rare Earth Slurry
 ree-solution=Rare Earth Solution
 cumene=Cumene
